# gencrawl

./: .gitignore  AGENTS.md  AUTONOMOUS-DASHBOARD-IMPROVEMENT-PROMPT.md  BUTTONS-FIXED-NOW-TEST.md  COMPLETE-DEPLOYMENT-SUMMARY.md  COMPLETE-SYSTEM-SUMMARY.md  CRITICAL-BUTTON-FIX.md  CRITICAL-FIXES-SUMMARY.md  DASHBOARD-ENHANCEMENT-SUMMARY.md  DEBUGGING-REPORT.md  DEPLOYMENT-COMPLETE.md  ENHANCED-MONITORING-COMPLETE.md  FINAL-DEPLOYMENT-SUMMARY.md  FINAL-STATUS-REPORT.md  FINAL-WORKING-SUMMARY.md  FIXES-APPLIED-SUMMARY.md  FIXES-IMPLEMENTED.md  IMPLEMENT-FINAL-IMPROVEMENTS.md  LANDING_PAGE_SUMMARY.md  LICENSE  MULTI-ITERATION-README.md  POST-AGENT-FIXES-PLAN.md  README.md  SYSTEM-READY.md  SYSTEM-STATUS.md  VISUAL-ANALYSIS-SUMMARY.md  docker-compose.yml  test_deployment.sh
backend/: Dockerfile  QUICK_REFERENCE.md  STATE_DIAGRAMS.md  STATE_MACHINE_DOCS.md  STATE_MACHINE_README.md  __init__.py  orchestrator.py  pyproject.toml
backend/api/: main.py
backend/config/: presets.json  templates.json
backend/crawlers/: crawl4ai_crawler.py  manager.py  playwright_crawler.py  scrapy_crawler.py
backend/events/: __init__.py  event_bus.py
backend/models/: __init__.py  crawl_schedule.py  crawl_settings.py  crawl_state.py  crawl_template.py
backend/persistence/: __init__.py  job_store.py
backend/services/: __init__.py  singletons.py  web_search.py
backend/tests/: test_state_machine.py
backend/utils/: README-ITERATIONS.md  __init__.py  checkpoint.py  discovery.py  gcp_vision.py  ingestion.py  iteration_manager.py  logger.py  metrics.py  nv_ingest.py  paths.py  scheduler.py  (+3 more)
(+157 files in other folders)
